# midipatcher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
applications/: main.cpp  main.help.in  main.hpp
examples/: MaxMSP-reversed-ports.patchfile  empty.patchfile
examples/MsgExec/: inc-cc-channel.sh
examples/RawExec/: inc-channel.cpp
examples/maxmsp-tcpcontrol/: max-net.js  midipatcher-tcpcontrol.maxpat
include/: AbstractInputPort.hpp  AbstractOutputPort.hpp  AbstractPort.hpp  AbstractStreamInputPort.hpp  AbstractStreamOutputPort.hpp  PortDescriptor.hpp  PortRegistry.hpp  main.hpp  midipatcher.hpp
include/Port/: FileIn.hpp  FileOut.hpp  MidiIn.hpp  MidiOut.hpp  UdpIn.hpp  UdpOut.hpp  VirtMidiIn.hpp  VirtMidiOut.hpp
include/midipatcher/: AbstractControl.hpp  AbstractStreamInputPort.hpp  CLI.hpp  Error.hpp  InteractiveControl.hpp  Patchfile.hpp  PortDescriptor.hpp  PortRegistry.hpp  TCPControl.hpp  log.hpp  midipatcher.hpp  version.h  version.hpp
include/midipatcher/Port/: AbstractControlPort.hpp  AbstractExecPort.hpp  AbstractFileReader.hpp  AbstractInputOutputPort.hpp  AbstractInputPort.hpp  AbstractMessageInputPort.hpp  AbstractMessageOutputPort.hpp  AbstractOutputPort.hpp  AbstractPort.hpp  AbstractStreamInputOutputPort.hpp  AbstractStreamInputPort.hpp  AbstractStreamOutputPort.hpp  ControlPort.hpp  FileIn.hpp  FileOut.hpp  InjectorPort.hpp  MidiIn.hpp  MidiOut.hpp  MsgExec.hpp  RawExec.hpp  RemoteControlPort.hpp  Serial.hpp  StreamExec.hpp  UdpIn.hpp  UdpOut.hpp  VirtMidiIn.hpp  VirtMidiOut.hpp
src/: AbstractControl.cpp  AbstractInputPort.cpp  AbstractOutputPort.cpp  AbstractPort.cpp  AbstractStreamInputPort.cpp  AbstractStreamOutputPort.cpp  CLI.cpp  CLI.help.in  InteractiveControl.cpp  InteractiveControl.help.in  Patchfile.cpp  PortDescriptor.cpp  PortRegistry.cpp  TCPControl.cpp  log.cpp  main.cpp  version.cpp.in
src/Port/: AbstractControlPort.cpp  AbstractExecPort.cpp  AbstractFileReader.cpp  AbstractInputOutputPort.cpp  AbstractInputPort.cpp  AbstractMessageInputPort.cpp  AbstractMessageOutputPort.cpp  AbstractOutputPort.cpp  AbstractPort.cpp  AbstractStreamInputOutputPort.cpp  AbstractStreamInputPort.cpp  AbstractStreamOutputPort.cpp  ControlPort.cpp  FileIn.cpp  FileOut.cpp  MidiIn.cpp  MidiOut.cpp  MsgExec.cpp  RawExec.cpp  RemoteControlPort.cpp  Serial.cpp  StreamExec.cpp  UdpIn.cpp  UdpOut.cpp  VirtMidiIn.cpp  VirtMidiOut.cpp
